# oop-coursework

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: coursework.cpp  coursework.hpp  difficulty.cpp  ending.cpp  game.cpp  hint.cpp  processevent.cpp  randomword.cpp  render.cpp  theme.cpp  updates.cpp  welcome.cpp
